@@ -36,41 +36,47 @@ public class Player implements Runnable {
         while (!Thread.currentThread().isInterrupted()) {
             // Try to acquire both left and right deck by locking left first and then locking right 
             leftDeck.lockthis();
-                if (rightDeck.tryLock()) {
-                    // if we realize that left deck have no card to be withdrawn, we must release both left and right deck, releasing only left deck and waiting for it to be filled while right deck is locked
-                    // can cause deadlock
-
-                    if (leftDeck.isEmpty()) {
-                        rightDeck.unlock();
-                        leftDeck.unlock();
-                    } else {
-                        //Given that we successfully lock both left and right deck, we can not perform atomic withdrawal and discard to right deck
-
-                        if (CardGame.whoWon != null){
-                            leftDeck.unlock();
-                            rightDeck.unlock();
-                            break;
-
-                        } else{
-                            this.withDrawnCard();
-                            this.discardingCard();
-                        }
-                        
-                        if (CardGame.whoWon == null && isWon()) {
-                            System.out.println("Player Index : " + playerIndex + " Win");
-                            writeDatatoFile("something");
-                            CardGame.whoWon = this;
-                            CardGame.checkSum();
-                        }
-                        //Once we finish with withdrawing and discarding, we can now release this lock
-                        leftDeck.unlock();
-                        rightDeck.unlock();
-                    }
-                } else {
+            if (rightDeck.tryLock()) {
+                
+                //If leftdeck is empty we must release both left and right deck to avoid dead lock.
+                if (leftDeck.isEmpty()) {
+                    rightDeck.unlock();
                     leftDeck.unlock();
+                } else {
+                    
+                    if (CardGame.whoWon != null){
+                        leftDeck.unlock();
+                        rightDeck.unlock();
+                        break;
+                    }
+                    // Automatically withdrawn from left and discard to right
+                    this.withDrawnCard();
+                    this.discardingCard();
+
+                    if (CardGame.whoWon != null){
+                        leftDeck.unlock();
+                        rightDeck.unlock();
+                        break;
+                    }
+                    
+                    if (isWon()) {
+                        CardGame.whoWon = this;
+                        System.out.println("Player Index : " + playerIndex + " Win");
+                        writeDatatoFile("Player Index : " + CardGame.whoWon.playerIndex + "has won the game and hence interrupt this thread to stop playing");
+                        CardGame.checkSum();
+                        leftDeck.unlock();
+                        rightDeck.unlock();
+                        break;
+                    }
+                    //Once we finish with withdrawing and discarding, we can now release both lock
+                    leftDeck.unlock();
+                    rightDeck.unlock();
                 }
+            } else {
+                leftDeck.unlock();
+            }
             if (CardGame.whoWon != null){
-                break;
+               break;
             }
             /*
              * We start a player thread by using for loop which mean that player at the start of playerArr in CardGame are more likely to start playing first
@@ -79,7 +85,7 @@ public class Player implements Runnable {
              *             : To make sure player 3 , 4, 5, have more chance to play evenly we can use time out, so that there is a time, where other thread may join
              */            
             try{
-                Thread.sleep(60L);
+                Thread.sleep(100L);
             }  catch (InterruptedException e){
                     Thread.currentThread().interrupt();
             }
@@ -89,9 +95,10 @@ public class Player implements Runnable {
            
         
     }
-    
+    //Withdrawn a card from the left deck
     public void withDrawnCard(){
         ArrayDeque<Card> leftDeckCardList = leftDeck.getCardList();
+        // Use pollFirst to return and also remove the card from the queue
         Card topCard = leftDeckCardList.pollFirst();
         playerCard.add(topCard);
         writeDatatoFile("Player " + playerIndex + " withDrawn a " + topCard.getValue() + " from left deck left deck is now : " + leftDeckCardList + "player hand is : " + playerCard);
@@ -100,10 +107,12 @@ public class Player implements Runnable {
     public void discardingCard(){
         ArrayDeque<Card> rightDeckCardList = rightDeck.getCardList();
         Card differentCard = getDifferCard();
+        // From specification we will dispose the card to the bottom of the deck
         rightDeckCardList.addLast(differentCard);
         writeDatatoFile(" and then discard " + differentCard.getValue() + " to the right deck right deck is now " + rightDeckCardList  + "player hand is : " + playerCard +  "\n");
     }
 
+    // A custom method for writing data to file, this save time so we don't have to keep doing try catch 
     public void writeDatatoFile(String message){
         try {
             writetoFile.write(message);
@@ -113,7 +122,7 @@ public class Player implements Runnable {
         }
     }
 
-    // return and remove a card from player hand , such that card value != prefered denomination
+    // Return and remove a card from player hand, such that a card is undesirable for player
     public Card getDifferCard(){
         for (Card eachCard : playerCard){
             if (eachCard.getValue() != playerIndex){
@@ -125,23 +134,21 @@ public class Player implements Runnable {
         return null;
     }
 
-    //Getter function, nothing special
     public Deck getLeftDeck(){
         return leftDeck;
     }
-
+  
     public Deck getRightDeck(){
         return rightDeck;
     }
-
-    //Return player hand
+    //return player hand
     public ArrayList<Card> getPlayerCard(){
         return this.playerCard;
     }
 
     // Check to see if player contain 4 card  with the same number
     public boolean isWon(){
-        int firstValue = playerCard.getFirst().getValue();
+        int firstValue = playerCard.get(0).getValue();
         for (Card eachCard : playerCard){
             if (eachCard.getValue() != firstValue){
                 return false;
